# rzed

./: Cargo.toml  build.ps1
assets/settings/: default.json
crates/ai_onboarding/src/: ai_onboarding.rs
crates/cli/src/: main.rs
crates/client/src/: client.rs
crates/onboarding/src/: onboarding.rs
crates/paths/src/: paths.rs
crates/release_channel/src/: lib.rs
crates/util/src/: util.rs
crates/windows_resources/src/: windows_resources.rs
crates/workspace/src/: welcome.rs
crates/zed/: Cargo.toml  build.rs
crates/zed/src/: main.rs  zed.rs
crates/zed/src/zed/: app_menus.rs  mac_only_instance.rs
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
script/: update_rzed_icons.py
tooling/msvc_spectre_libs/: Cargo.toml  build.rs
